# aftrmonkeyball

./: .gitignore  CLEAN and REBUILD.sh  README.md  RUN CMAKE.bat  RUN TESTS Release.sh  aftr.conf
mm/models/: ball.mtl  goal.mtl  stage.mtl
mm/models/aiai/: aiai.mtl
src/: CMakeLists.txt  GLViewMonkeyMovement.cpp  GLViewMonkeyMovement.h  WOPhysX.cpp  WOPhysX.h  main.cpp
src/gtest/: CMakeLists.txt  GLViewMonkeyMovement_test.cpp  main.cpp
